Fixed few bugs on IE11

--- a/src/sass/templates/about.scss
+++ b/src/sass/templates/about.scss
@@ -62,6 +62,7 @@
     color: $main-lighter;
     margin-bottom: 20px;
     margin-top: 0;
+    max-width: 650px; // FOR IE 11
 
     &:nth-of-type(3) {
       margin-bottom: 60px;
@@ -73,6 +74,7 @@
     flex-flow: row wrap;
     justify-content: space-between;
     margin-bottom: 40px;
+    max-width: 650px; //FOR IE11
   }
 
   &__contact {
